; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/crush/extr_hash.c_crush_hash32.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/crush/extr_hash.c_crush_hash32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crush_hash32(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %10 [
    i32 128, label %7
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @crush_hash32_rjenkins1(i32 %8)
  store i32 %9, i32* %3, align 4
  br label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %10, %7
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @crush_hash32_rjenkins1(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
